--- a/Desktop/Crane/Project-Unify-iOS-App-master/Unify/Info.plist
+++ b/Desktop/Crane/Project-Unify-iOS-App-master/Unify/Info.plist
@@ -56,5 +56,19 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>Fabric</key>
+    <dict>
+        <key>APIKey</key>
+        <string>87087b87e0e600943ae1006ff0df0c6a97b9b8f1</string>
+        <key>Kits</key>
+        <array>
+            <dict>
+                <key>KitInfo</key>
+                <dict/>
+                <key>KitName</key>
+                <string>Crashlytics</string>
+            </dict>
+        </array>
+    </dict>
 </dict>
 </plist>
