updatd NSCameraUsageDescription in info.plist

--- a/Unify/Info.plist
+++ b/Unify/Info.plist
@@ -78,5 +78,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>To create profile pictures which are displayed on your business cards in the app</string>
 </dict>
 </plist>
