--- a/Unify/Info.plist
+++ b/Unify/Info.plist
@@ -15,7 +15,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.62</string>
+	<string>0.63</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>Fabric</key>
@@ -48,9 +48,9 @@
 	<key>NSContactsUsageDescription</key>
 	<string>Import Users</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Allow &apos;Unify&apos; to access your location to discover people nearby</string>
+	<string>Allow 'Unify' to access your location to discover people nearby</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Allow &apos;Unify&apos; to access your location to discover people nearby</string>
+	<string>Allow 'Unify' to access your location to discover people nearby</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>To create your Unifty Profile Picture Image</string>
 	<key>UIAppFonts</key>
